# macfetch

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: ci.yml  enforce-branch.yml  homebrew.yml  release.yml
include/: ascii.h  ascii.hpp  colors.h  colors.hpp  constants.hpp  descriptors.hpp  segments.h  segments.hpp  utils.h  utils.hpp
src/: ascii.cpp  descriptors.cpp  main.cpp  main.rs  segments.cpp  utils.cpp
src/macfetch/: constants.rs  mod.rs
src/macfetch/ascii/: constants.rs  mod.rs
src/macfetch/segments/: constants.rs  mod.rs
src/macfetch/utils/: cache.rs  cli.rs  command.rs  config.rs  constants.rs  ctl.rs  host.rs  mod.rs
