[package]
name = "macfetch"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0.0"
users = "0.11.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
os-version = "0.2.0"
libc = "0.2.131"
battery = "0.7.8"
system-info = "0.1.2"
core-graphics = "0.22.3"
iron-oxide = "0.1.1"
cached = "0.42.0"
